# Enterprise-Agent-Hub

./: .dockerignore  .gitignore  .impeccable.md  AGENTS.md  LOCAL_TEST_STARTUP.md  README.md  node_modules  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  启动文档.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/sqlite/migrations/: 0001_p1_local_state.sql  0003_extension_management.sql
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/adapters/: config.rs  detection.rs  distribution.rs  errors.rs  mod.rs  transform.rs
apps/desktop/src-tauri/src/commands/: client_updates.rs  distribution.rs  local_state.rs  local_state_types.rs
apps/desktop/src-tauri/src/commands/local_state/: checksum.rs  configuration.rs  distribution_lifecycle.rs  extension_lifecycle.rs  package_lifecycle.rs  pathing.rs  persistence.rs  query.rs  scan.rs  tests.rs
apps/desktop/src-tauri/src/store/: central_store.rs  commands.rs  hash.rs  sqlite.rs
apps/desktop/src-tauri/tests/: full_closure.rs
deploy/: server-check.sh  server-down.sh  server-up.sh
docs/: desktop-release-runbook.md  frontend-mvp-implementation.md  mvp-delivery-summary.md  phase-1-2-review.md  skills_manage.md  前端重构要求
infra/: .env.production.example  docker-compose.legacy.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.yml
scripts/: lint-workspace.js  run-python-tests.js  verify-production-assets.js  verify-production-runtime.js
(+545 files in other folders)
