[package]
name = "enterprise-agent-hub-desktop"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[lib]
name = "enterprise_agent_hub_desktop"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
